Add getRandomCity function to city controllers
